// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test ToastNotification component - Experimental Enabled should match snapshot for props ({ message: 'Hello', icon: 'checkTick' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#AAEEEF",
        "borderColor": "rgba(0,59,61,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#003B3D",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
  <View
    style={
      {
        "width": 16,
      }
    }
  />
  <RNSVGSvgView
    accessibilityElementsHidden={true}
    accessibilityLabel=""
    accessible={false}
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    color="#003B3D"
    focusable={false}
    height={24}
    importantForAccessibility="no-hide-descendants"
    meetOrSlice={0}
    minX={0}
    minY={0}
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        clipRule={0}
        d="M17.7071 9.29289C18.0976 9.68342 18.0976 10.3166 17.7071 10.7071L11.4142 17C10.6332 17.781 9.36684 17.7811 8.58579 17L5.29289 13.7071C4.90237 13.3166 4.90237 12.6834 5.29289 12.2929C5.68342 11.9024 6.31658 11.9024 6.70711 12.2929L10 15.5858L16.2929 9.29289C16.6834 8.90237 17.3166 8.90237 17.7071 9.29289Z"
        fill={
          {
            "type": 2,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Test ToastNotification component - Experimental Enabled should match snapshot for props ({ message: 'Hello', variant: 'error' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#FFD9D9",
        "borderColor": "rgba(93,19,19,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#5D1313",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component - Experimental Enabled should match snapshot for props ({ message: 'Hello', variant: 'info' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#E1F5FE",
        "borderColor": "rgba(33,92,118,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#215C76",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component - Experimental Enabled should match snapshot for props ({ message: 'Hello', variant: 'neutral' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#AAEEEF",
        "borderColor": "rgba(0,59,61,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#003B3D",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component - Experimental Enabled should match snapshot for props ({ message: 'Hello', variant: 'success' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#E1F4E1",
        "borderColor": "rgba(34,64,33,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#224021",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component - Experimental Enabled should match snapshot for props ({ message: 'Hello', variant: 'warning' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#FFF5DA",
        "borderColor": "rgba(97,76,21,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#614C15",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', icon: 'checkTick' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#AAEEEF",
        "borderColor": "rgba(0,59,61,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#003B3D",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
  <View
    style={
      {
        "width": 16,
      }
    }
  />
  <RNSVGSvgView
    accessibilityElementsHidden={true}
    accessibilityLabel=""
    accessible={false}
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    color="#003B3D"
    focusable={false}
    height={24}
    importantForAccessibility="no-hide-descendants"
    meetOrSlice={0}
    minX={0}
    minY={0}
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        clipRule={0}
        d="M17.7071 9.29289C18.0976 9.68342 18.0976 10.3166 17.7071 10.7071L11.4142 17C10.6332 17.781 9.36684 17.7811 8.58579 17L5.29289 13.7071C4.90237 13.3166 4.90237 12.6834 5.29289 12.2929C5.68342 11.9024 6.31658 11.9024 6.70711 12.2929L10 15.5858L16.2929 9.29289C16.6834 8.90237 17.3166 8.90237 17.7071 9.29289Z"
        fill={
          {
            "type": 2,
          }
        }
        fillRule={0}
        propList={
          [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'error' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#FFD9D9",
        "borderColor": "rgba(93,19,19,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#5D1313",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'info' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#E1F5FE",
        "borderColor": "rgba(33,92,118,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#215C76",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'neutral' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#AAEEEF",
        "borderColor": "rgba(0,59,61,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#003B3D",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'success' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#E1F4E1",
        "borderColor": "rgba(34,64,33,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#224021",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'warning' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "borderCurve": "continuous",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      {
        "backgroundColor": "#FFF5DA",
        "borderColor": "rgba(97,76,21,0.5)",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.5}
    style={
      [
        {},
        {
          "color": "#614C15",
          "fontFamily": "Titillio",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "600",
          "lineHeight": 20,
        },
        {
          "flexShrink": 1,
          "paddingVertical": 2,
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;
